--- a/home.html
+++ b/home.html
@@ -67,64 +67,20 @@
 
       <div class="header_logo">
     <button class="buttongoweb"><span></span>    </button>
-        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" >Home</span>
+        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" >Wots48 App</span>
       </div>
 
 
   </div>
-    <div class="section">
-        <div class="container" style="margin-top: 40px;">
-            <div class="slideshow-container">
-                <div class="slideshow-image">
-                    <a href="https://www.youtube.com/watch?v=5cy3vDjTfFY"><img src="/assets/heading-bg.jpg"
-                            alt="Slide 1" loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://www.youtube.com/watch?v=OpACc2RRTlA"><img src="/assets/heading-bg1.jpg"
-                            alt="Slide 2" loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://ssk.jkt48.com/2024/id/vote"><img src="/assets/heading-bg6.jpg" alt="Slide 8"
-                            loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://jkt48.com/ramadhaneventshow2024pb?lang=id"><img src="/assets/heading-bg2.jpg"
-                            alt="Slide 3" loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://www.showroom-live.com/premium_live/officialJKT48/B45325"><img
-                            src="/assets/heading-bg3.jpg" alt="Slide 4" loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://jkt48.com/springhascome?lang=id"><img src="/assets/heading-bg4.jpg" alt="Slide 5"
-                            loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://jkt48.com/valkyrie48?lang=id"><img src="/assets/heading-bg5.jpg" alt="Slide 6"
-                            loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://www.youtube.com/watch?v=XQpA7bqIcyY&ab_channel=JKT48"><img
-                            src="/assets/heading-bg6.jpeg" alt="Slide 7" loading="lazy"></a>
-                </div>
-            </div>
-            <br>
-            <div style="text-align:center">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
-                <span class="dot" onclick="currentSlide(4)"></span>
-                <span class="dot" onclick="currentSlide(5)"></span>
-                <span class="dot" onclick="currentSlide(6)"></span>
-                <span class="dot" onclick="currentSlide(7)"></span>
-                <span class="dot" onclick="currentSlide(8)"></span>
-            </div>
-        </div>
-    </div>
+<div style="width: 100%;display: flex; justify-content: center; align-items: center;margin-top: 20px;">
+            <button class="buttongoweb" onclick="goToLink('https://youtu.be/Ztg79dr34n4?si=TDiW-J8Wd32P-AxA')">
+             <img src="assets/banner-mv-bym.jpeg" style="object-fit: cover; width: 370px; height: 200px; margin-top: 45px;opacity: 0.9;">
+          </button>
+</div>
 
 
 
-<div style="padding: 20px;">
+<div style="padding: 20px;margin-top: -10px;">
   <div style="display: flex; align-items: center; padding: 10px 0;">
 <div class="nolive-indicator">
   <div class="circle"></div>
