--- a/live.html
+++ b/live.html
@@ -104,26 +104,22 @@
                 </div>
 
             </div>
-            <div class="box-live" id="box-idn" style="background: transparent;">
-                <h2 class="titleup"id="title-idn">
 
-                </h2><br>
-                <div id="liveListIdn" style="display:block;">
+                <div id="liveListIdn" >
                     <!-- Content for Live Idn -->
 
                 </div>
 
-            </div>
+
             <!-- Box untuk Live Showroom -->
-            <div class="box-live"  style="background: transparent;margin-top: -65px;">
-                <h2 class="titleup" id="title-sr">
-                </h2><br>
-                <div id="liveListShowroom" style="display:block;">
+
+
+                <div id="liveListShowroom" >
                     <!-- Content for Live Showroom -->
 
                 </div>
                 <br><hr><br>
-            </div>
+
         </div>
     </div>
 </div>
