--- a/drecentlive.html
+++ b/drecentlive.html
@@ -134,7 +134,7 @@
       <span style="font-size: 30px;" class="mdi mdi-history"></span>
 <h1 style="font-size: 20px;">Other Recent Live</h1>
   </div>
-    <div class="container"style="margin-top: -40px;">
+    <div class="container"style="margin-top: -40px;width: 100%;justify-content: left;">
         <div class="flex-container">
             <!-- Tombol untuk menampilkan semua konten -->
 
@@ -143,7 +143,7 @@
                 <h2 class="titleup"id="title-idn">
 
                 </h2><br>
-                <div id="liveList" style="display:flex;flex-direction: column;width: 100%;">
+                <div id="liveList" style="display:flex;flex-direction:justify-content: left;margin-left: -15px;flex-direction: column;width: 110%;">
                     <!-- Content for Live Idn -->
 
                 </div>
@@ -153,7 +153,7 @@
                 <h2 class="titleup"id="title-idn">
 
                 </h2><br>
-                <div id="liveListIdn" style="display:block;">
+                <div id="liveListIdn" >
                     <!-- Content for Live Idn -->
 
                 </div>
@@ -163,7 +163,7 @@
             <div class="box-live"  style="background: transparent;margin-top: -65px;">
                 <h2 class="titleup" id="title-sr">
                 </h2><br>
-                <div id="liveListShowroom" style="display:block;">
+                <div id="liveListShowroom"style="display:flex;flex-direction:justify-content: left;margin-left: -15px;flex-direction: column;width: 110%;" >
                     <!-- Content for Live Showroom -->
 
                 </div>
