--- a/idn2.html
+++ b/idn2.html
@@ -233,7 +233,7 @@ document.getElementById('idnapp').addEventListener('click', () => {
     const formattedTime = date.toLocaleTimeString('id-ID', {
       hour: '2-digit',
       minute: '2-digit',
-    });
+    })replace('.', ':');
 
     // Menampilkan Tanggal dan Jam secara terpisah
     const startDateElement = document.getElementById('startDate');
