--- a/home.html
+++ b/home.html
@@ -107,9 +107,13 @@
             <div class="section">
                 <div class="container">
                     <div class="box">
-                        <h1 class="titleup"><span class="icon"><i class="fas fa-birthday-cake"></i></span> Next Birthday
+                      <div style="display: flex; width: 100%; align-items: center;gap: 10px;">
+                        
+                                    <i style="font-size:25px;color: pink;" class="fas fa-birthday-cake"></i>
+                        <h1 class="titleup">Ulang Tahun bulan ini
                             
                         </h1>
+                      </div>
                         <br />
                         <hr />
                         <br />
