--- a/drecentlive.html
+++ b/drecentlive.html
@@ -24,6 +24,24 @@
     <link href='https://fonts.googleapis.com/css?family=Barlow Condensed' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.3.67/css/materialdesignicons.min.css">
 
+<style>
+  .gradient-1{
+    background: linear-gradient(45deg, #62F600, #00FF6E);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+  }
+  .gradient-2{
+    background: linear-gradient(45deg, #FF3E3E, #FF8E8E);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .gradient-3{
+    background: linear-gradient(45deg, #FFE52D, #FFD700);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  
+  }
+</style>
 </head>
 <body>
 
@@ -98,14 +116,14 @@
 <div style="display: flex; width: 100%; flex-direction: column;gap: 10px;margin-top: -5px;padding: 10px;">
   <img src="assets/watermark.png" id="imagelive" style="width: 100%;">
       <div style="display: flex; width: 100%; background-color: #323D54; justify-content: left; align-items: left; padding: 15px; border-radius: 20px;">
-      <span style="font-size: 37px;color:#62F600;" class="mdi mdi-star-four-points-box"></span>
+      <span style="font-size: 37px;" class="mdi mdi-star-four-points-box gradient-1"></span>
       <div style="width: 84%; text-align: center; display: flex; flex-direction: column; justify-content: center; align-items: center;">
         <h1 style="font-size: 21px;font-family: 'Zen Maru Gothic';" id="title"></h1>
         <span style="font-size: 11px; opacity: 0.8;" id="bookstar"></span>
       </div>
     </div>
   <div style="display: flex; width: 100%; background-color: #323D54; justify-content: left; align-items: left; padding: 15px; border-radius: 20px;">
-    <span style="font-size: 37px;color: #FF3E3E;" class="mdi mdi-clipboard-text-clock"></span>
+    <span style="font-size: 37px;" class="mdi mdi-clipboard-text-clock gradient-2"></span>
     <div style="width: 84%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
       <h1 style="font-size: 21px;font-family: 'Zen Maru Gothic';" id="live-date"></h1>
           <div style="width: 100%; display: flex; justify-content: center; align-items: center; gap: 5px;">
@@ -117,7 +135,7 @@
     </div>
   </div>
     <div style="display: flex; width: 100%; background-color: #323D54; justify-content: left; align-items: left; padding: 15px; border-radius: 20px;">
-          <span style="font-size: 37px;color:#FFE52D;" class="mdi mdi-timer"></span>
+          <span style="font-size: 37px;" class="mdi mdi-timer gradient-3"></span>
     <div style="width: 84%; text-align: center; display: flex; flex-direction: column; justify-content: center; align-items: center;">
       <h1 style="font-size: 21px;font-family: 'Zen Maru Gothic';" id="live-duration"></h1>
       <span style="font-size: 11px; opacity: 0.8;">Durasi</span>
