--- a/idn2.html
+++ b/idn2.html
@@ -113,9 +113,9 @@
       </div>
     </div>
     <div style="width: 100%; display: flex; flex-direction: column;justify-content:center;margin-top: 20px; align-items: center; gap: 10px;">
-    <div style="display: flex; width: 87%;border-radius: 15px; background: #2A3347; gap: 10px; padding: 15px;justify-content: left; align-items: center;box-shadow: 1px black;">
-      <span style="font-size: 46px;" class="mdi mdi-application-edit"></span>
-      <div style="width: 100%; display: flex; flex-direction: column; justify-content: left;">
+    <div style="display: flex; width: 87%;border-radius: 15px; background: #2A3347; gap: 10px; padding-left: 10px; padding-right: 15px; padding-top: 15px; padding-bottom: 10px; justify-content: left; align-items: center;box-shadow: 1px black;">
+<img src="" id="image" style="width: 50px; height: 50px;">
+      <div style="width: 100%; display: flex; flex-direction: column; justify-content: left;margin-top: -10px;">
         <span style="font-family: 'Zen Maru Gothic';font-size: 12px; opacity: 0.8;">Judul Live</span>
                   <h1 style="font-size: 20px;" id="liveTitle"></h1>
       </div>
@@ -190,6 +190,7 @@
   const startDate = urlParams.get('start_date');
   const liveType = urlParams.get('type');
   const slug = urlParams.get('slug'); 
+  const image = urlParams.get('image');
   const link = urlParams.get('link')// Ambil slug dari URL
 document.getElementById('idnapp').addEventListener('click', () => {
   window.open(link, '_blank')
@@ -199,7 +200,7 @@ document.getElementById('idnapp').addEventListener('click', () => {
   if (slug && liveTitleElement) {
     liveTitleElement.textContent = decodeURIComponent(slug);
   }
-
+document.getElementById("image").src = `${image}`;
   // Periksa apakah videoUrl sudah terisi dengan benar
   const videoElement = document.getElementById('video');
   if (videoUrl && videoElement) {
