--- a/idn.html
+++ b/idn.html
@@ -114,7 +114,9 @@
     </div>
     <div style="width: 100%; display: flex; flex-direction: column;justify-content:center;margin-top: 20px; align-items: center; gap: 10px;">
     <div style="display: flex; width: 87%;border-radius: 15px; background: #2A3347; gap: 10px; padding-left: 10px; padding-right: 15px; padding-top: 15px; padding-bottom: 10px; justify-content: left; align-items: center;box-shadow: 1px black;">
-<img src="" id="image" style="width: 50px; height: 50px;">
+
+        <img src="assets/watermark.png" id="image" style="width: 50px; height: 50px; border-radius: 10px; object-fit: cover;box-shadow: 2px black;">
+
       <div style="width: 100%; display: flex; flex-direction: column; justify-content: left;margin-top: -10px;">
         <span style="font-family: 'Zen Maru Gothic';font-size: 12px; opacity: 0.8;">Judul Live</span>
                   <h1 style="font-size: 20px;" id="liveTitle"></h1>
