--- a/drecentlive.html
+++ b/drecentlive.html
@@ -54,9 +54,9 @@
   
   }
   .gradient-judul{
-    background: linear-gradient(135deg, #00d4ff, #00BA76 50%, #8a2be2);
-    -webkit-background-clip: text; /* Klip background ke teks */
-    -webkit-text-fill-color: transparent; 
+    background: linear-gradient(to right, #ff7e5f, #feb47b); /* Gradien warna */
+    -webkit-background-clip: text; /* Menggunakan gradien untuk teks */
+    color: transparent;
   }
 </style>
 </head>
