--- a/drecentlive.html
+++ b/drecentlive.html
@@ -315,7 +315,7 @@
         document.getElementById("gift").textContent = `${parseInt(gift).toLocaleString('id-ID')} G`;
         document.getElementById("rupiah").innerHTML = `(<span class="mdi mdi-plus-minus"></span>${convertToRupiahSr(points)})`;
       
-        document.getElementById("title").innerHTML = `History Log`;
+        document.getElementById("title").innerHTML = `History Log Showroom`;
         document.getElementById("imagelive").src = `${imgsr}`;
         document.getElementById("iconExt").classList = "mdi mdi-star-four-points-box gradient-1";
       }
